--- a/portfolio-site/src/variables.scss
+++ b/portfolio-site/src/variables.scss
@@ -12,3 +12,4 @@ $light-page-background: #F3F3F3;
 
 /* Dark theme colors */
 $dark-page-background: #171717;
+$dark-theme-text-color: #f3f3f3ee;
